force-app/main/default/objects/Lead/fields/Type_structure__c.field-meta.xml
<CustomField>
    <fullName>Type_structure__c</fullName>
    <description>Champ en provenance du site internet</description>
    <label>Type de structure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Création d&apos;entreprise</fullName>
            </value>
            <value>
                <fullName>Entreprise</fullName>
            </value>
            <value>
                <fullName>Collectivité</fullName>
            </value>
            <value>
                <fullName>Copropriété</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>