force-app/main/default/objects/Lead/fields/URL_Documents_charges__c.field-meta.xml
<CustomField>
    <fullName>URL_Documents_charges__c</fullName>
    <description>Champs utilisé pour mapping avec le site web via Marketing cloud</description>
    <label>URL Documents chargés</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>