force-app/main/default/objects/Lead/fields/URL_page_origine__c.field-meta.xml
<CustomField>
    <fullName>URL_page_origine__c</fullName>
    <label>URL du formulaire</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>