force-app/main/default/objects/Lead/fields/URL_page_precedente__c.field-meta.xml
<CustomField>
    <fullName>URL_page_precedente__c</fullName>
    <label>URL de la page précédente</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>