force-app/main/default/objects/Lead/recordTypes/Apporteur_Affaires.recordType-meta.xml
<RecordType>
    <fullName>Apporteur_Affaires</fullName>
    <active>true</active>
    <businessProcess>Apporteur Affaires</businessProcess>
    <description>Lead reçu depuis les apporteurs d&apos;affaires</description>
    <label>Apporteur Affaires</label>
</RecordType>