force-app/main/default/objects/Lead/recordTypes/Prospection_Partenaire.recordType-meta.xml
<RecordType>
    <fullName>Prospection_Partenaire</fullName>
    <active>true</active>
    <businessProcess>Prospection Partenaire</businessProcess>
    <label>Prospection Partenaire</label>
</RecordType>