force-app/main/default/objects/Lead/recordTypes/Prospection_Prescripteur.recordType-meta.xml
<RecordType>
    <fullName>Prospection_Prescripteur</fullName>
    <active>true</active>
    <businessProcess>Prospection Prescripteur</businessProcess>
    <description>Pour la gestion des prescripteurs</description>
    <label>Prospection Prescripteur</label>
</RecordType>