force-app/main/default/objects/Lead/recordTypes/Prospection_telephonique.recordType-meta.xml
<RecordType>
    <fullName>Prospection_telephonique</fullName>
    <active>true</active>
    <businessProcess>Prospection téléphonique</businessProcess>
    <label>Prospection téléphonique</label>
</RecordType>