force-app/main/default/objects/Lead/validationRules/Authorise_convert.validationRule-meta.xml
<ValidationRule>
    <fullName>Authorise_convert</fullName>
    <active>true</active>
    <errorConditionFormula>AND(IsConverted,
				NOT(ISPICKVAL(Status,&apos;ACD reçu&apos;)),
				NOT(ISPICKVAL(Status,&apos;Convertie&apos;)),
			 RecordTypeId = &apos;0122o0000003qgYAAQ&apos;)</errorConditionFormula>
    <errorMessage>Merci de mettre le status à &apos;ACD reçu&apos; ou &apos;Convertie&apos; avant de convertir la piste en compte.</errorMessage>
</ValidationRule>