force-app/main/default/objects/Lead/validationRules/Lead_source_incompleteProspectionTel.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_source_incompleteProspectionTel</fullName>
    <active>false</active>
    <description>Si la lead est du record type &apos;Prospection téléphonique&apos; alors on doit renseigner une source pour la cellule RDV</description>
    <errorConditionFormula>AND(RecordType.DeveloperName = &apos;Prospection_telephonique&apos;,
ISPICKVAL(Source_cellule_RDV__c,&apos;&apos;))</errorConditionFormula>
    <errorDisplayField>Source_cellule_RDV__c</errorDisplayField>
    <errorMessage>Merci de renseigner la période de l&apos;achat groupé.</errorMessage>
</ValidationRule>