force-app/main/default/objects/Lead/validationRules/LeadOwnerIsQueue.validationRule-meta.xml
<ValidationRule>
    <fullName>LeadOwnerIsQueue</fullName>
    <active>true</active>
    <description>Empeche la mise à jour du statut tant que la piste appartient à la queue</description>
    <errorConditionFormula>LEFT(OwnerId,3)&lt;&gt;&quot;005&quot;&amp;&amp;
ISCHANGED( Status )</errorConditionFormula>
    <errorMessage>Merci de vous attribuer la piste avant de travailler dessus</errorMessage>
</ValidationRule>