force-app/main/default/objects/Lead/validationRules/LeadSource_Demande_contact_site.validationRule-meta.xml
<ValidationRule>
    <fullName>LeadSource_Demande_contact_site</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(LeadSource), ISPICKVAL(PRIORVALUE(LeadSource),&quot;Demande de contact site&quot;),  $Profile.Name = &quot;Commercial&quot;)</errorConditionFormula>
    <errorDisplayField>LeadSource</errorDisplayField>
    <errorMessage>Vous ne pouvez pas la source de la piste lorsqu&apos;elle est en &apos;Demande de contact site&apos;</errorMessage>
</ValidationRule>