force-app/main/default/objects/Lead/validationRules/Motif_hors_cible_manquant.validationRule-meta.xml
<ValidationRule>
    <fullName>Motif_hors_cible_manquant</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Status, &quot;Hors Cible&quot;),
    ISBLANK(TEXT(Motif_hors_cible__c))
)</errorConditionFormula>
    <errorDisplayField>Motif_hors_cible__c</errorDisplayField>
    <errorMessage>Merci de renseigner un motif de hors cible</errorMessage>
</ValidationRule>