force-app/main/default/objects/Lead/validationRules/Motif_refus_manquant.validationRule-meta.xml
<ValidationRule>
    <fullName>Motif_refus_manquant</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Status, &quot;Refusée&quot;),
    ISBLANK(TEXT(Motif_refus__c))
)</errorConditionFormula>
    <errorDisplayField>Motif_refus__c</errorDisplayField>
    <errorMessage>Merci de renseigner un motif de refus</errorMessage>
</ValidationRule>