force-app/main/default/objects/Lead/validationRules/Raison_abandon.validationRule-meta.xml
<ValidationRule>
    <fullName>Raison_abandon</fullName>
    <active>true</active>
    <errorConditionFormula>OR(AND(
     ISPICKVAL(Status, &apos;Sans suite&apos;),
				 ISPICKVAL(RaisonAbandon__c, &apos;&apos;)
),AND(
     NOT(ISPICKVAL(Status, &apos;Sans suite&apos;)),
				 NOT(ISPICKVAL(RaisonAbandon__c, &apos;&apos;))
))</errorConditionFormula>
    <errorDisplayField>RaisonAbandon__c</errorDisplayField>
    <errorMessage>Veuillez préciser une raison pour le statut &quot;Sans suite&quot;</errorMessage>
</ValidationRule>