force-app/main/default/objects/Lead/validationRules/Statut_Appel_incorrect.validationRule-meta.xml
<ValidationRule>
    <fullName>Statut_Appel_incorrect</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status, &quot;Faux numéro&quot;),
NOT(ISPICKVAL(Statut_appel__c, &quot;Faux numéro&quot;))
)</errorConditionFormula>
    <errorDisplayField>Statut_appel__c</errorDisplayField>
    <errorMessage>Merci de mettre le statut d&apos;appel à &apos;Faux Numéro&apos;</errorMessage>
</ValidationRule>