force-app/main/default/objects/Lead/validationRules/Type_de_rappel_manquant.validationRule-meta.xml
<ValidationRule>
    <fullName>Type_de_rappel_manquant</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Status, &quot;ARappeler&quot;),
      ISBLANK(TEXT(Type_rappel__c)),
											RecordTypeId = &apos;012aT000002CdsVQAS&apos;)</errorConditionFormula>
    <errorDisplayField>Type_rappel__c</errorDisplayField>
    <errorMessage>Merci de renseigner un type de rappel</errorMessage>
</ValidationRule>