force-app/main/default/objects/Lead/listViews/Copy_of_Suivi_des_pistes_Marketing.listView-meta.xml
<ListView>
    <fullName>Copy_of_Suivi_des_pistes_Marketing</fullName>
    <booleanFilter>1 AND 2 AND (3 OR 4)</booleanFilter>
    <columns>Derniere_action_realisee__c</columns>
    <columns>Prochaine_action_planifiee__c</columns>
    <columns>LastScore__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>Campagne_emailing__c</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>Commentaires__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Campagne_emailing__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Sans suite,Refusée,Faux numéro,Hors Cible</value>
    </filters>
    <filters>
        <field>Role_du_proprietaire__c</field>
        <operation>contains</operation>
        <value>sédentaire ADE</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>contains</operation>
        <value>Automobile,Réactivation Lyon,Warm,Hot,Emailing Lyon</value>
    </filters>
    <label>Suivi des pistes - Emailing Lyon</label>
    <sharedTo>
        <role>Commercial_sedentaire_ADE</role>
        <role>Directeur_commercial_sedentaire_ADE</role>
        <role>Direction</role>
    </sharedTo>
</ListView>