force-app/main/default/objects/Lead/listViews/Demande_de_contact_site_Paris.listView-meta.xml
<ListView>
    <fullName>Demande_de_contact_site_Paris</fullName>
    <columns>Derniere_action_realisee__c</columns>
    <columns>Prochaine_action_planifiee__c</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type_formulaire__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Sans suite,Refusée,Faux numéro,Hors Cible</value>
    </filters>
    <label>Demande de contact site - Paris</label>
    <sharedTo>
        <role>Commercial_ADE_PARIS</role>
        <role>Directeur_commercial_ADE_PARIS</role>
    </sharedTo>
</ListView>