force-app/main/default/objects/Lead/listViews/Demande_de_contact_site_PEP_S.listView-meta.xml
<ListView>
    <fullName>Demande_de_contact_site_PEP_S</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type_formulaire__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>contains</operation>
        <value>Guglielmi,Acquaviva,Fauquignon</value>
    </filters>
    <label>Demande de contact site - PEP&apos;S</label>
    <sharedTo>
        <role>Priceur</role>
    </sharedTo>
</ListView>