force-app/main/default/objects/Lead/listViews/Fichier_prospection_Lead.listView-meta.xml
<ListView>
    <fullName>Fichier_prospection_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Sans suite</value>
    </filters>
    <label>Fichier de prospection</label>
    <queue>Fichier_prospection</queue>
    <sharedTo>
        <role>Commercial_sedentaire_ADE</role>
    </sharedTo>
</ListView>