force-app/main/default/objects/Lead/listViews/Import_sparkalne_10_25_Lead.listView-meta.xml
<ListView>
    <fullName>Import_sparkalne_10_25_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Queue</filterScope>
    <label>Import sparkalne 10-25</label>
    <queue>Import_sparkalne_10_25</queue>
</ListView>