force-app/main/default/objects/Lead/listViews/Lead_Ellisphere_Import_A_Rappeler.listView-meta.xml
<ListView>
    <fullName>Lead_Ellisphere_Import_A_Rappeler</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>contains</operation>
        <value>Ellisphere Import</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>ARappeler</value>
    </filters>
    <label>Lead Ellisphere Import - A RAPPELER</label>
    <sharedTo>
        <group>Energy</group>
        <group>Energy_Sub</group>
    </sharedTo>
</ListView>